--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 <!-- header -->
 	<section class="header">
 		<a href="index.html">
-			<button></button>
+			<h1>Fondazione Libro Game</h1>
+			<!-- <button></button> -->
 		</a>
-		<h1>Fondazione Libro Game</h1>
+		<!-- <h1>Fondazione Libro Game</h1> -->
 	</section>
 </body>
 
