--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 	<section class="home">
 		<h1 class="title">Fondazione Libro Game</h1>
 		<br>
-		<p>Sito in fase di costruzione.</p>
+		<p>Siamo un'associazione senza scopo di lucro. <br>
+			Riuniamo e difendiamo le persone che hanno dei poteri paranormali.
+		</p>
 	</section>
 
 <!-- header -->
