add "chi siamo" page

--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Fondazione Libro Game</title>
+	<title>Fondazione Libro Game - chi siamo</title>
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="description" content="Fondazione Libro Game">
@@ -21,21 +21,24 @@
 	
 <!-- contenuti -->
 	<section class="home">
-		<h1 class="title">Fondazione Libro Game</h1>
+		<h1 class="title">I fondatori</h1>
 		<br>
-		<p>Associazione senza scopo di lucro. <br>
-			Riuniamo e difendiamo le persone che hanno dei poteri paranormali.
-		</p>
+		<p>Aaron Falco</p>
+		<p>Delia Grimaldi</p>
+		<p>Eris Cordis</p>
+		<p>Flavio Scott</p>
+		<p>Petra Del Ponte</p>
+		<p>Ruben Franchi</p>
+		<p>Zeno Zoni</p>
 	</section>
 
 <!-- header -->
 	<section class="header">
-		<a>
-			<h1>Fondazione Libro Game</h1>
+		<a href="index.html">
+			Fondazione Libro Game
 		</a>
-		
-		<a href="chi_siamo.html">
-			chi siamo
+		<a>
+			<h1>chi siamo</h1>
 		</a>
 	</section>
 </body>
