--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -30,6 +30,8 @@
 		<p>Petra Del Ponte</p>
 		<p>Ruben Franchi</p>
 		<p>Zeno Zoni</p>
+		<br>
+		<a href="mailto:clandellibrogame@gmail.com">clandellibrogame@gmail.com</a>
 	</section>
 
 <!-- header -->
