add characters description

--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -23,13 +23,64 @@
 	<section class="home">
 		<h1 class="title">I fondatori</h1>
 		<br>
-		<p>Aaron Falco</p>
-		<p>Delia Grimaldi</p>
-		<p>Eris Cordis</p>
-		<p>Flavio Scott</p>
-		<p>Petra Del Ponte</p>
-		<p>Ruben Franchi</p>
-		<p>Zeno Zoni</p>
+		<p>
+			Aaron Falco <br>
+			<span>età: 16</span>
+			<br>
+			<span>background: apprendista selvicoltore, scout</span>
+			<br>
+			<span>potere: comunicazione con gli animali, scurovisione</span>
+		</p>
+		
+		<p>
+			Delia Grimaldi <br>
+			<span>età: 32</span>
+			<br>
+			<span>background: medium, insegnante di tai chi</span>
+			<br>
+			<span>potere: comunicazione con gli spiriti, visione dell'aura</span>
+		</p>
+		<p>
+			Eris Cordi <br>
+			<span>età: 19</span>
+			<br>
+			<span>background: studentessa di informatica, gamer</span>
+			<br>
+			<span>potere: manipolazione degli eventi (tramite il Libro Game).</span>
+		</p>
+		<p>
+			Flavio Scott <br>
+			<span>età: 21</span>
+			<br>
+			<span>background: studente di chimica, triatleta</span>
+			<br>
+			<span>potere: combustione, magnetismo</span>
+		</p>
+		<p>
+			Petra Del Ponte <br>
+			<span>età: 23</span>
+			<br>
+			<span>background: barista, praticante di arti marziali miste</span>
+			<br>
+			<span>potere: telecinesi</span>
+		</p>
+		<p>
+			Ruben Franchi <br>
+			<span>età: 27</span>
+			<br>
+			<span>background: truffatore, giocatore di poker</span>
+			<br>
+			<span>potere: nessuno (si spaccia per cartomante)</span>
+		</p>
+		<p>
+			Zeno Zoni <br>
+			<span>età: 34</span>
+			<br>
+			<span>background: impiegato di commercio (ex sicario)</span>
+			<br>
+			<span>potere: invisibilità, immunità a veleni e malattie</span>
+		</p>
+		<br>
 		<br>
 		<a href="mailto:clandellibrogame@gmail.com">clandellibrogame@gmail.com</a>
 	</section>
