--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 	<section class="home">
 		<h1 class="title">Fondazione Libro Game</h1>
 		<br>
-		<p>Associazione senza scopo di lucro. <br>
-			Riuniamo e difendiamo le persone che hanno dei poteri paranormali.
-		</p>
+		<p>Associazione senza scopo di lucro.</p>
+		<p><span class="evidenziatore">missione</span>
+			<br>difendere i diritti delle persone che hanno dei poteri paranormali.</p>
+		<p><span class="evidenziatore">valori</span>
+			<br>lealtà, giustizia, collaborazione.</p>
 	</section>
 
 <!-- header -->
